//===----------------------------------------------------------------------===//
//
// This source file is part of the Swift Distributed Actors open source project
//
// Copyright (c) 2019 Apple Inc. and the Swift Distributed Actors project authors
// Licensed under Apache License v2.0
//
// See LICENSE.txt for license information
// See CONTRIBUTORS.md for the list of Swift Distributed Actors project authors
//
// SPDX-License-Identifier: Apache-2.0
//
//===----------------------------------------------------------------------===//


syntax = "proto3";

option optimize_for = SPEED;
option swift_prefix = "Proto";

import "ActorAddress.proto";

message ClusterMembership {
    repeated ClusterMember members = 1;
    ClusterMember leader = 2;
}

message ClusterMember {
    UniqueNode node = 1;
    ClusterMemberStatus status = 2;
    ClusterMemberReachability reachability = 3;
}

enum ClusterMemberReachability {
    CLUSTER_MEMBER_REACHABILITY_UNSPECIFIED = 0;
    CLUSTER_MEMBER_REACHABILITY_REACHABLE = 1;
    CLUSTER_MEMBER_REACHABILITY_UNREACHABLE = 2;
}

enum ClusterMemberStatus {
    CLUSTER_MEMBER_STATUS_UNSPECIFIED = 0;
    CLUSTER_MEMBER_STATUS_JOINING = 1;
    CLUSTER_MEMBER_STATUS_UP = 2;
    CLUSTER_MEMBER_STATUS_DOWN = 3;
    CLUSTER_MEMBER_STATUS_LEAVING = 4;
    CLUSTER_MEMBER_STATUS_REMOVED = 5;
}

message ClusterMembershipGossip {
    // origin of the gossip
    UniqueNode from = 1;
    repeated ClusterMember members = 2; // TODO: Something else, "membership diff"?
}
